--- a/rapid-note/package.json
+++ b/rapid-note/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0"
+    "@testing-library/react": "^13.3.0",
+    "history": "^5.3.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
