--- a/rapid-note/package.json
+++ b/rapid-note/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +40,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "gh-pages": "^4.0.0",
+    "homepage": "https://cfape.github.io/LIM017-notes/",
     "history": "^5.3.0",
     "react-test-renderer": "^18.2.0"
   }
