obteniendo todos los documentos de firestore

--- a/rapid-note/package.json
+++ b/rapid-note/package.json
@@ -41,7 +41,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "gh-pages": "^4.0.0",
-    "homepage": "https://cfape.github.io/LIM017-notes/",
+    "homepage": "https://cfape.github.io//",
     "history": "^5.3.0",
     "react-test-renderer": "^18.2.0"
   }
