--- a/rapid-note/package.json
+++ b/rapid-note/package.json
@@ -15,9 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -40,8 +38,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "gh-pages": "^4.0.0",
-    "homepage": "https://cfape.github.io//",
     "history": "^5.3.0",
     "react-test-renderer": "^18.2.0"
   }
