--- a/rapid-note/package.json
+++ b/rapid-note/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build"
+    "deploy": "gh-pages -d build --git git"
   },
   "eslintConfig": {
     "extends": [
